                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-03-2006 changed: decoupled video playback from master clock in dvdplayer to allow for nicer transition when timestamps in dvd wrap back
 - 10-03-2006 fixed: CUE sheet path name resolving (and other path name resolving) was broken on remote shares.
 - 10-03-2006 changed: music nav, restored track naming template for songs sorted by track num
 - 10-03-2006 fixed: last selected cue item in directory is not remembered
 - 10-03-2006 fixed: items of the music playlist are reset to file when the content of the playlist changes
 - 10-03-2006 fixed: movies where not stacked when adding a folder to the playlist
 - 10-03-2006 fixed: cue items where not filtered when adding a folder to the playlist
 - 10-03-2006 fixed: Crash bug in some skins introduced by fix for first few thumbs.
 - 10-03-2006 added: Enabled the Resume button in dialog video info.
 - 10-03-2006 changed: <imagepath> or <info> in a multiimage control can now point to a single image file (doesn't have to be a folder of files).
 - 10-03-2006 fixed: Multiple controlgroups with no id defined were given the same id which meant last control focus was not saved on window exit correctly.
 - 10-03-2006 fixed: Incorrect labels shown at start of filemanager copy, move and delete.
 - 10-03-2006 fixed: First few thumbs sometimes wouldn't update in My Pictures
 - 10-03-2006 changed: Visualisation screensaver doesn't reset on button press unless a dialog is active.
 - 10-03-2006 changed: GUI Messages are sent to the first visible control that matches the id, and only sent to invisible controls if the visible one does not handle it.